public/stylesheets/global.css
body{
	background-image: url('/images/wb-bg2.png');
}

@font-face {
font-family: neucha;
src: url( "../Neucha.ttf");
}

@font-face {
font-family: Reenie Beanie;
src: url( "../ReenieBeanie.ttf");
}

#wrapper{
  min-height:800px;
}

#wrapper, #header,#footer{
    padding:5px;
}

#header{
    text-align:center;
}

.stickyLogo{
	margin:0 auto;
	background:#FEFEBA; 
	width:260px; 
	height:100px;
	padding:6px 6px 26px 6px;
    float:left;
	/* Firefox */  
	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1); 
	/* Safari+Chrome */  
	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);  
	/* Opera */  
	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
}

.stickyLogo p{
 /*   font-family: 'Yanone Kaffeesatz', serif;*/
	font-family: neucha, 'Helvetica', serif;
	font-size:198%;
	color:#0F0F0F;
}

.logoTitle{
	padding-top:30px;
	font-family:Reenie Beanie,'Helvetica',sans-serif;
	color:#DD0000;
	font-size:600%;
}

.menu{
    float:left;
    /*width:75%;   */
    padding:15px;
    margin-left:8px;
}

.menuItem, .newItem{
	text-decoration:none;
	font-family: neucha, serif;
	font-size:200%;
	color:black;
	list-style-type:none; 
	text-align:center;
	float:left; 
	min-height:40px;
	/* Firefox */  
	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1);  
	/* Safari+Chrome */  
	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);  
	/* Opera */  
	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
}

.menuItem{
	background:#cfc; 
	padding:36px 22px 16px 22px;
	margin:0px 0 0 20px;
    float:left;
    width:130px;
}

.mainView{
    background:#CCEEFF;
}

.newItem{
	background:#FF8040; 
	width:200px;
	height:100px;
	padding-top:30px;
}

.menuItem:hover,.menuItem:focus, .newItem:hover,.newItem:focus {
	   -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);  
	   -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);  
	   box-shadow:10px 10px 7px rgba(0,0,0,.7);  
	   -webkit-transform: scale(1.0);  
	   -moz-transform: scale(1.0);  
	   -o-transform: scale(1.0);  
	   position:relative;  
	   z-index:5;
    -moz-transition:-moz-transform .15s linear;  
    -o-transition:-o-transform .15s linear;  
    -webkit-transition:-webkit-transform .15s linear;  
}

#content{
		text-align:justify;
		width:-moz-max-content;
		padding:10px 0 10px 5px;
		height:100%;
		clear:both;
}

.fixedSizeContent{
	width:1280px;
}

.iterationLane{
    border:3px #F0F0F0 dashed; 
    padding:0px; 
    width:200px;
}

.reportsLane{
    margin:0 2em 2em 0 !important;
    width:150px;
}

.iterationLane ul li{
	margin: 0 0em 2em -2.5em;
}

.iterationStorySticky{
	min-height:155px;
	height:100%;
	width:150px;
	font-size:80%;
    background:#FEFEBB; 
	padding:10px;
    -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
	-webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
	box-shadow:10px 10px 7px rgba(0,0,0,.7);
}

.iterationStorySticky h2{
	font-family: neucha;
	font-size:150%;
	text-align:center;
}

.iterationStoryItem{
	font-family:Reenie Beanie,arial,sans-serif;
	font-size:180%;
}

#footer{
	clear:both;
	text-align:center;
}

/* Basic Style for the stickies*/
.storySticky{ 
	background:#FEFEBB; 
	width:250px;
	height:320px; 
	padding:10px;
}

.requirementsStickies .storySticky {
	background:#CEF;
}

.storySticky h2{
	font-family: neucha;
	font-size:200%;
	text-align:center;
}

.storyItem{
	font-family:Reenie Beanie,arial,sans-serif;
	font-size:180%;
	margin-bottom:8px;
}

/* Sticky Shadow property*/
.storySticky{
	/* Firefox */  
	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
	/* Safari+Chrome */  
	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
	/* Opera */  
	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
}

/* Sticky Zoom effect*/
.storySticky:hover,.storySticky:focus{
	-moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
	-webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
	box-shadow:10px 10px 7px rgba(0,0,0,.7);
	-webkit-transform: scale(1.15);
	-moz-transform: scale(1.15);
	-o-transform: scale(1.15);
	-moz-transition:-moz-transform .15s linear;
	-o-transition:-o-transform .15s linear;
	-webkit-transition:-webkit-transform .15s linear;
	position:relative;
	z-index:5;
}

ul li a{
	text-decoration:none;
}

ul li{
	list-style:none;
}


ul li{
	margin:0em 3em 2em 0em;
	float:left;
}

